--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ a:hover {
     background: #FFFFFF url("img/pageload-spinner.gif") no-repeat center center;
 }
 
+.col-sm-4 > ul > li{
+    padding-bottom: 0.4rem;
+}
+
 .bloc {
     width: 100%;
     clear: both;
@@ -824,6 +828,7 @@ h4 {
 .bg-presentation {
     background-image: url("img/image-de-presentation.bmp");
 }
+
 
 @media (max-width: 1024px) {
     .bloc {
