--- a/style.css
+++ b/style.css
@@ -656,7 +656,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: black!important;
 }
 
 .container {
@@ -742,6 +742,10 @@ h4 {
 
 .white {
     color: #FFFFFF!important;
+}
+
+.black{
+    color: black;
 }
 
 .portfolio-thumb {
