--- a/style.css
+++ b/style.css
@@ -521,7 +521,7 @@ button {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    opacity: 0;
+    visibility: hidden;
     z-index: 4;
     transition: all .3s ease-in-out;
 }
